# content-api-haskell-client

./: .gitignore  ApiClient.hs  ContentApiModel.hs  Example.hs  LICENSE  README.md  ToDo.md  guardian-content-api-client.cabal  open-platform-content-api-haskell-client.cabal  stack.yaml
Network/Guardian/: ContentApi.hs
Network/Guardian/ContentApi/: Content.hs  Tag.hs
example/: Main.hs  gu-headlines.cabal
guardian-content-api-client/: guardian-content-api-client.cabal
guardian-content-api-client/Network/Guardian/: ContentApi.hs
guardian-content-api-client/Network/Guardian/ContentApi/: Content.hs  Reference.hs  Section.hs  URL.hs
