name:                guardian-content-api-client
version:             0.1.0.0
-- synopsis:
-- description:
license:             Apache-2.0
license-file:        LICENSE
author:              Robert Berry, Ben James
-- maintainer:
copyright:           Copyright 2014 Guardian News and Media Limited
category:            Web
build-type:          Simple
extra-source-files:  README.md
cabal-version:       >=1.10

library
  exposed-modules:     Network.Guardian.ContentApi
                     , Network.Guardian.ContentApi.Content
                     , Network.Guardian.ContentApi.Reference
                     , Network.Guardian.yContentApi.Section
                     , Network.Guardian.ContentApi.Tag
                     , Network.Guardian.ContentApi.URL
  other-extensions:    OverloadedStrings, DeriveDataTypeable, RecordWildCards
  build-depends:       base >=4.7 && <4.8
                     , blaze-builder >=0.3 && <0.4
                     , lifted-base >=0.2 && <0.3
                     , aeson >=0.7 && <0.8
                     , bytestring >=0.10 && <0.11
                     , conduit >=1.1 && <1.2
                     , text >=1.1 && <1.2
                     , network >=2.5 && <2.6
                     , http-conduit >=2.1 && <2.2
                     , http-types >=0.8 && <0.9
                     , transformers >=0.4 && <0.5
                     , containers >=0.5 && <0.6
                     , time >=1.4 && <1.5
                     , old-locale >=1.0 && <1.1
                     , resourcet >=1.1.2 && <1.2
  -- hs-source-dirs:      
  default-language:    Haskell2010
