name:                guardian-content-api-client
version:             0.1.0.0
-- synopsis:
-- description:
license:             Apache-2.0
license-file:        LICENSE
author:              Robert Berry, Ben James
-- maintainer:
copyright:           Copyright 2014 Guardian News and Media Limited
category:            Web
build-type:          Simple
cabal-version:       >=1.10

library
  exposed-modules:     Network.Guardian.ContentApi
                     , Network.Guardian.ContentApi.Content
                     , Network.Guardian.ContentApi.Reference
                     , Network.Guardian.ContentApi.Section
                     , Network.Guardian.ContentApi.Tag
                     , Network.Guardian.ContentApi.URL
  other-extensions:    OverloadedStrings, DeriveDataTypeable, RecordWildCards
  build-depends:       base >= 4.6 && <5
                     , transformers >= 0.3
                     , blaze-builder >= 0.3
                     , aeson >= 0.7
                     , bytestring >= 0.10
                     , conduit >= 1.1
                     , text >= 1.1
                     , network >= 2.5
                     , http-conduit >= 2.1
                     , http-types >= 0.8
                     , containers >= 0.5
                     , time >= 1.4
                     , resourcet >= 1.1
                     , unliftio >= 0.2.8.1
  -- hs-source-dirs:      
  default-language:    Haskell2010
